--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
         "@ionic-native/status-bar": "~4.12.0",
         "@ionic/pro": "2.0.3",
         "@ionic/storage": "2.1.3",
+        "cordova-android": "^6.2.3",
         "cordova-browser": "^4.1.0",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-file": "^6.0.1",
+        "cordova-plugin-file-transfer": "^1.7.1",
+        "cordova-plugin-ionic": "^5.1.5",
         "cordova-plugin-ionic-keyboard": "^2.1.2",
         "cordova-plugin-ionic-webview": "^2.1.3",
         "cordova-plugin-media": "^5.0.2",
@@ -58,9 +61,19 @@
             "cordova-plugin-ionic-webview": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {}
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-ionic": {
+                "APP_ID": "78ea85d5",
+                "CHANNEL_NAME": "Master",
+                "UPDATE_METHOD": "background",
+                "WARN_DEBUG": "true",
+                "UPDATE_API": "https://api.ionicjs.com",
+                "MAX_STORE": "2",
+                "MIN_BACKGROUND_DURATION": "30"
+            }
         },
         "platforms": [
+            "android",
             "browser",
             "ios"
         ]
